--- a/.github/workflows/gh-prioritize-npm.yml
+++ b/.github/workflows/gh-prioritize-npm.yml
@@ -1,11 +1,9 @@
-# Optional - add the following lines after line java -jar to create prioritize dashboard
-#           chmod +x ./prioritize-dashboard-gh.sh
-#          ./prioritize-dashboard-gh.sh
-
 name: NPM Prioritize Scan
 
 on:
   push:
+    branches: [ release* ]
+  pull_request:
     branches: [ release* ]
 
 jobs:
@@ -33,14 +31,21 @@ jobs:
           npm install
       - name: WhiteSource Unified Agent Scan
         env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           WS_APIKEY: ${{secrets.APIKEY}}
+          WS_USERKEY: ${{secrets.USERKEY}}
+          WS_PRODUCTNAME: GH_${{github.event.repository.name}}
+          WS_PROJECTNAME: ${{github.ref}}_Prioritize
+          WS_ENABLEIMPACTANALYSIS: true
+          WS_REQUIREKNOWNSHA1: false
+          WS_RESOLVEALLDEPENDENCIES: false
+          WS_NPM_RESOLVEDEPENDENCIES: true
+          WS_NPM_RESOLVELOCKFILE: false
+          WS_FILESYSTEMSCAN: false
+          WS_GENERATEPROJECTDETAILSJSON: true
         run: |
-          curl -LJO https://github.com/whitesource/unified-agent-distribution/releases/latest/download/wss-unified-agent.jar
-          echo UA downloaded successfully
-          export WS_ENABLEIMPACTANALYSIS=true
-          export WS_REQUIREKNOWNSHA1=false
-          export WS_RESOLVEALLDEPENDENCIES=false
-          export WS_NPM_RESOLVEDEPENDENCIES=true
-          export WS_NPM_RESOLVELOCKFILE=false
-          export WS_FILESYSTEMSCAN=false
-          java -jar wss-unified-agent.jar -appPath ./package.json -d ./ -product GH_${{ github.event.repository.name }} -project ${{ github.ref }}_Prioritize
+          curl -LJO https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar
+          echo Unified Agent downloaded successfully
+          java -jar wss-unified-agent.jar -appPath ./package.json -d ./
+           chmod +x ./ghissue-eua.sh
+          ./ghissue-eua.sh
